<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Group ID, Artifact ID, and Version -->
    <groupId>ua.lpnu.lendiel.vitalii</groupId>
    <artifactId>CPPT_LAB_WORKS</artifactId>
    <version>4.0.0</version>
    <packaging>jar</packaging>

    <name>CPPT Laboratory Works</name>

    <!-- Properties for version management -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <release.lab>lab04</release.lab>
        <lab01.version>1.0.0</lab01.version>
        <lab02.version>2.0.0</lab02.version>
        <lab03.version>3.0.0</lab03.version>
        <lab04.version>4.0.0</lab04.version>
        <lab05.version>5.0.0</lab05.version>
    </properties>

    <!-- Dependencies -->
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.12.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


     <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes><exclude>version.properties</exclude></excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes><include>version.properties</include></includes>
            </resource>
        </resources>
        <plugins> 
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId> 
                <artifactId>maven-compiler-plugin</artifactId> 
                <version>3.13.0</version> 
            </plugin> 
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId> 
                <artifactId>maven-surefire-plugin</artifactId> 
                <version>3.5.2</version> 
            </plugin> 
            <plugin> 
                <groupId>com.github.spotbugs</groupId> 
                <artifactId>spotbugs-maven-plugin</artifactId> 
                <version>4.9.7.0</version> 
                <executions> 
                    <execution> 
                        <phase>verify</phase> 
                        <goals><goal>check</goal></goals> 
                    </execution> 
                </executions>
            </plugin> 
        </plugins> 
    </build> 
</project>
